syntax = "proto3";

package api.map.v1;

option go_package = "map-service/api/map/v1;v1";
option java_multiple_files = true;
option java_package = "api.map.v1";

service Map {
	rpc GetPath(GetPathRequest) returns (PathResponse);
	rpc CheckPath(CheckPathRequest) returns (CheckPathResponse);
}

message Point {
	float lat = 1;
	float lon = 2;
}

message GetPathRequest {
	repeated Point points = 1;
}

message PathResponse {
	string shape = 1;
	repeated float time = 2; 
}

message CheckPathRequest {
	string shape = 1;
	Point point = 2;
}

message CheckPathResponse {
	bool isValid = 1;
}